vlib/v/checker/tests/struct_pub_field.out
vlib/v/checker/tests/struct_pub_field.vv:9:4: error: field `i` of struct `Foo` is immutable
    7 |         i: 1
    8 |     }
    9 |     a.i = 2
      |       ^
   10 | }
vlib/v/checker/tests/struct_pub_field.vv:9:2: error: `a` is immutable, declare it with `mut` to make it mutable
    7 |         i: 1
    8 |     }
    9 |     a.i = 2
      |     ^
   10 | }
